--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId "zhouxin.updatedemo"
         minSdkVersion 14
         targetSdkVersion 24
-        versionCode 1
+        versionCode 31
         versionName "1.0"
     }
     buildTypes {
@@ -24,5 +24,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile project(':update')
-    
+
+
+    //leakCanary 检查内存泄露
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
 }
